--- a/personal website/css/index.css
+++ b/personal website/css/index.css
@@ -11,54 +11,107 @@ a{
 img{
     border: 0;
 }
-/*--------Õ∑ø™ º-------*/
+/*--------Â§¥ÂºÄÂßã-------*/
 html,body{
     height: 100%;
     width: 100%;
-    overflow-x:hidden;
+    /*overflow-x:hidden;*/
 }
 #head{
-    background: url("img/tree1.jpg") no-repeat;
+    background: url("../img/tree1.jpg") no-repeat;
     background-size: 100%  100%;
     height: 100vh;
     width: 100vw;
     position: relative;
-    overflow: hidden;
 }
-/*-----µº∫Ωø™ º-------*/
+/*-----ÂØºËà™ÂºÄÂßã-------*/
 #big-nav{
     width: 500px;
     height: 70px;
     background: #000000;
-    position: relative;
-    z-index: 1;
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-#name img,#name{
+#p-name{
     height: 70px;
     width: 200px;
 }
-#a-line{
-    width: 2px;
-    height: 40px;
-    background: #292929;
+.nav-button {
     position: absolute;
-    top: 15px;
-    right: 66px;
-}
-#navigation{
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 20px;
+    top: 25px;
     right: 16px;
+    z-index: 21;
+    width: 30px;
+    height: 40px;
+    line-height: 40px;
     cursor: pointer;
-    background-image: url("img/nav1.png");
-    background-size:30px 30px;
+    font-size: 24px;
 }
-#navigation:hover{
-    background-image: url("img/nav2.png");
-    background-size:  30px 30px;
+.nav-button:before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -20px;
+    background: #292929;
+    width: 2px;
+    height: 100%;
 }
+.nav-button span {
+    width: 100%;
+    float: left;
+    margin-bottom: 5px;
+    height: 3px;
+    background: #fff;
+    position: relative;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.nav-button span:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    z-index: 1;
+    background: #FFC815;
+
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.nav-button:hover span::before{
+    width: 100%;
+}
+.nav-button.cmenu .nbs{
+    display: none;
+}
+.nav-button.cmenu .ncs {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    margin-bottom: 0;
+    top: 6px;
+}
+.nav-button.cmenu .nos {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    margin-bottom: 0;
+    top: 9px;
+}
+
 #s-nav{
     background: rgba(0,0,0,0.7);
     color: #fff;
@@ -69,18 +122,43 @@ html,body{
     display: none;
 }
 
-#s-nav li{
+#s-nav .b-a a{
+    display: block;
     text-align: center;
     padding: 15px 0;
-    cursor: pointer;
+    color: #fff;
+    font-size: 24px;
 }
-#s-nav li:hover{
+.s-list{
+    font-size: 15px;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 1s;
+    -moz-transition: height 1s;
+    -ms-transition: height 1s;
+    -o-transition: height 1s;
+    transition: height 1s;
+}
+.b-a:hover .s-list{
+    height: 90px;
+}
+#s-nav .s-list a{
+    display: block;
+    color: #fff;
+    text-align: center;
+    font-size: 15px;
+    padding: 5px 0;
+    height: 20px;
+}
+#s-nav .s-list a:hover{
     background: rgba(300,300,300,.4);
     color: #FFC815;
 }
-/********µº∫ΩΩ· ¯******/
 
-/*-------±ÍÃ‚ø™ º-----*/
+/********ÂØºËà™ÁªìÊùü******/
+
+/*-------ÔøΩÔøΩÔøΩ‚ø™ º-----*/
 #title{
     /*text-align: center;*/
     position: absolute;
@@ -156,9 +234,9 @@ html,body{
 .arrow .gt{
     margin-left: 6px;
 }
-/********±ÍÃ‚Ω· ¯*******/
+/********ÔøΩÔøΩÔøΩÔøΩÔøΩÔøΩÔøΩ*******/
 
-/********Õ∑Ω· ¯*********/
+/********Õ∑ÔøΩÔøΩÔøΩÔøΩ*********/
 #nav{
     position: relative;
     /*display: none;*/
@@ -197,7 +275,7 @@ html,body{
     flex-grow: 2;
     width: 0;
     /*float: left;*/
-    background: url("img/about1.png") no-repeat;
+    background: url("../img/about1.png") no-repeat;
     background-size: 100%100%;
     height: 100vh;
     position: relative;
