--- a/personal website/css/index.css
+++ b/personal website/css/index.css
@@ -13,26 +13,27 @@ img{
 }
 /*--------头开始-------*/
 html,body{
-    height: 100%;
+    height: 2000px;
     width: 100%;
     /*overflow-x:hidden;*/
 }
 #head{
-    background: url("../img/tree1.jpg") no-repeat;
-    background-size: 100%  100%;
-    height: 100vh;
-    width: 100vw;
     position: relative;
+    overflow: hidden;
+}
+#slider{
+    height: 100%;
+    width: 100%;
 }
 /*-----导航开始-------*/
 #big-nav{
     width: 500px;
     height: 70px;
-    background: #000000;
-    z-index: 20;
+    background: #313131;
+    z-index: 22;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
 }
 #p-name{
     height: 70px;
@@ -49,7 +50,7 @@ html,body{
     cursor: pointer;
     font-size: 24px;
 }
-.nav-button:before {
+.nav-button::before {
     content: '';
     position: absolute;
     top: -10px;
@@ -65,13 +66,8 @@ html,body{
     height: 3px;
     background: #fff;
     position: relative;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -ms-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
 }
-.nav-button span:before {
+.nav-button span::before {
     content: '';
     position: absolute;
     top: 0;
@@ -120,8 +116,8 @@ html,body{
     font-size: 25px;
     position: fixed;
     top: 0;
-    left: 0;
-    z-index: 1;
+    right: 0;
+    z-index: 21;
     display: none;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
@@ -155,20 +151,20 @@ html,body{
     left: 50px;
     top: 100px;
 }
-.nav-decor-l:before,.nav-decor-r:before{
+.nav-decor-l::before,.nav-decor-r::before{
     height: 2px;
     width: 50px;
     left: 2px;
 }
-.nav-decor-l:after ,.nav-decor-r:after{
+.nav-decor-l::after ,.nav-decor-r::after{
     height: 50px;
     width: 2px;
 }
-.nav-decor-l:before, .nav-decor-l:after {
+.nav-decor-l::before, .nav-decor-l::after {
     left: 0;
     top: 0;
 }
-.nav-decor:before, .nav-decor:after {
+.nav-decor::before, .nav-decor::after {
     content: '';
     position: absolute;
     background: rgba(255,255,255,0.51);
@@ -177,13 +173,12 @@ html,body{
     right: 50px;
     bottom: 50px;
 }
-.nav-decor-r:before, .nav-decor-r:after {
+.nav-decor-r::before, .nav-decor-r::after {
     right: -2px;
     bottom: 0;
 }
 
 #a-line{
-    content: '';
     position: absolute;
     width: 60%;
     height: 2px;
@@ -198,7 +193,7 @@ html,body{
     transition: all 200ms linear;
 }
 #ul-nav{
-margin-top: 5em;
+margin-top: 173px;
 }
 
 #s-nav .b-a a,.l-span{
@@ -237,99 +232,23 @@ color: #FFC815;
 
 /********导航结束******/
 
-/*-------标题开始-----*/
-#title{
-    /*text-align: center;*/
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    background: rgba(0,0,0,0.2);
-    padding-left: 20px;
-    border-left: 7px solid #FFC815;
-}
-#title h3{
-    color: #fff;
-    font-weight: 700;
-    font-size: 4vw;
-    font-family:'Merienda-Regular';
-    text-shadow: 2px 2px 10px #292929;
-    /*font-size: 4vw;*/
-}
-#title h4 a{
-    color: #fff;
-    /*color: #FFCF78;*/
-    font-size: 2vw;
-    font-weight: 500;
-}
-@media (max-width: 960px) {
-    #big-nav{
-        width: 100%;
-    }
-    #s-nav{
-        width: 100%;
-        height: 90%;
-        padding-top: 5vh;
-    }
-    #s-nav li{
-        padding: 4vh 0;
-    }
-    #title{
-        border-left: none;
-    }
-    #title::after{
-        content: '';
-        display: block;
-        width: 70px;
-        height: 5px;
-        background: #FFC815;
-        margin: 0 auto;
-    }
-    #title h4{
-        text-align: center;
-    }
-}
-.arrow{
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
-}
-.arrow .lt,.gt{
-    display: block;
-    width: 3vw;
-    height: 3vw;
-    background: #FFC815;
-    color: #fff;
-    text-align: center;
-    line-height: 2.7vw;
-    float: left;
-    cursor: pointer;
-    font-size: 5vmin;
-}
-.arrow .gt{
-    margin-left: 6px;
-}
-/********标题结束*******/
 /*头结束*/
 /*------内容开始--------*/
 #nav{
     position: relative;
+    overflow: hidden;
     /*display: none;*/
 }
 #nav ul{
     background: #000000;
     color: #fff;
-    height: 10vh;
+    height: 70px;
     width: 100vw;
     /*position: fixed;*/
 }
 #nav ul li{
     width: 19vw;
-    line-height: 10vh;
+    line-height: 70px;
     float: left;
     text-align: center;
     cursor: pointer;
