--- a/personal website/css/index.css
+++ b/personal website/css/index.css
@@ -422,18 +422,30 @@ margin-top: 30px;
 #b-part{
     position: relative;
     width: 700px;
-    height: 502px;
+    height: 582px;
+    overflow: hidden;
+}
+#arrow{
+    position: absolute;
+    top: 40px;
+    right: 5px;
+}
+#arrow i{
+    transition: all 0.3s ease-out;
+    cursor: pointer;
+}
+#arrow i:hover{
+    color: #ccc;
+}
+#arrow #gt{
+    margin-left: 10px;
 }
 #work{
     margin-top: 80px;
-    /*margin-bottom: 40px;*/
-    width: 700px;
-    height: 502px;
-    overflow: hidden;
-}
-#b-part .arrow{
-    bottom: -70px;
-    right: 70px;
+    width: 1450px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .works{
     width: 300px;
@@ -441,7 +453,8 @@ margin-top: 30px;
     border: 1px solid #ccc;
     position: relative;
     float: left;
-    margin-right: 30px;
+    margin: 0 30px;
+    transition: all 0.5s linear;
 }
 .works img{
     width: 280px;
@@ -472,20 +485,254 @@ margin-top: 30px;
     text-align: center;
     line-height: 32px;
     cursor: pointer;
+    transition: all 0.33s linear;
 }
 .go:hover{
     background: #ffc815;
     color: #fff;
     border: 2px solid #FFE0E9;
 }
+/*  part4  */
+/*.vc_col-sm-12{*/
+    /*position: relative;*/
+    /*min-height: 1px;*/
+    /*padding-left: 15px;*/
+    /*padding-right: 15px;*/
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+/*}*/
+/*.piechart-holder{*/
+    /*padding-top: 50px;*/
+    /*float: left;*/
+    /*width: 100%;*/
+    /*position: relative;*/
+/*}*/
+/*.row {*/
+    /*margin-left: -15px;*/
+    /*margin-right: -15px;*/
+/*}*/
+/*.piechart {*/
+    /*position: relative;*/
+    /*padding-bottom: 20px;*/
+/*}*/
+/*.col-md-3{*/
+    /*min-height: 1px;*/
+    /*padding-left: 15px;*/
+    /*padding-right: 15px;*/
+/*}*/
+/*.chart {*/
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*width: 150px;*/
+    /*height: 150px;*/
+    /*border-radius: 100%;*/
+    /*margin-bottom: 26px;*/
+    /*text-align: center;*/
+/*}*/
+/*.percent {*/
+    /*display: inline-block;*/
+    /*font-size: 21px;*/
+    /*line-height: 152px;*/
+    /*z-index: 2;*/
+/*}*/
+/*.percent:after {*/
+    /*content: '%';*/
+    /*margin-left: 0.1em;*/
+    /*font-size: .8em;*/
+/*}*/
 
+/*.chart canvas {*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+/*}*/
+/*canvas {*/
+    /*max-width: 100%;*/
+/*}*/
+/*.skills-description {*/
+    /*float: left;*/
+    /*width: 100%;*/
+    /*margin: 10px 0;*/
+    /*font-family: 'Montserrat', sans-serif;*/
+    /*text-transform: uppercase;*/
+    /*!*color: #666;*!*/
+    /*font-size: 12px;*/
+    /*color: #FFC815;*/
+/*}*/
+/*  part5  */
+.viselem{
+    padding-top: 50px;
+    background: rgba(9, 9, 9, 1);
+}
+.row{
+    display: flex;
+    margin-bottom: 40px;
+}
+.col-md-4{
+    flex-grow: 1;
+    width: 0;
+}
+.footer-info h4 {
+    float: left;
+    width: 100%;
+    /*color: #fff;*/
+    position: relative;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    margin-bottom: 45px;
+    color: #fff;
+}
+.footer-social i{
+    background: #ffc815;
+    color: rgba(0,0,0,1);
+    font-size: 25px;
+    text-align: center;
+    line-height: 40px;
+    width: 40px;
+    height: 40px;
+    font-weight: bold;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    float: left;
+    margin:1px 3px 0 0;
+}
+.footer-info h4:before {
+    content: '';
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    width: 60px;
+    height: 2px;
+    background: #ffc815;
+}
 
+.footer-social i:hover{
+    color: rgba(53, 53, 53, 0.7);
+}
+
+.footer-contacts li {
+    width: 100%;
+    margin-bottom: 10px;
+    text-align: left;
+    font-size: 14px;
+}
+
+.footer-contacts li a{
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
+    color: #707070;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+.footer-contacts li a i{
+    color: rgba(255,200,21,1);
+}
+.footer-contacts li a:hover{
+    color: #a6a6a6;
+}
+.footer-contacts li a:hover i{
+    color: rgba(255,200,21,0.5);
+}
+.footer-contacts .icon-fangkuai{
+    font-weight: 900;
+    font-size: 16px;
+}
+.y-advice h2,.y-advice form{
+    color: #fff;
+}
+.y-advice{
+    margin: 15px 0 0 35px;
+}
+.y-advice textarea{
+    margin-left: 45px;
+    outline: none;
+}
+input{
+    outline: none;
+}
+#sub{
+    background: #ffc815;
+    color: #fffdef;
+    width: 130px;
+    height: 35px;
+    font-size: 16px;
+    margin-left: 46px;
+    border: 1px solid #ffff00;
+    cursor: pointer;
+}
+/*  part5  end*/
 /*------内容结束--------*/
+/*footer 开始*/
+.copyright{
+    background: #000;
+}
+.container {
+    max-width: 900px;
+    width: 92%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+}
+.last{
+    height: 80px;
+    position: relative;
+}
+.to-top-holder p {
+    color: #fff;
+    position: relative;
+    top: 35px;
+    font-size: 10px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 24px;
+    padding-bottom: 10px;
+}
+.to-top-holder p:before {
+    width: 2px;
+    height: 50px;
+}
+.to-top-holder p:after {
+    width: 50px;
+    height: 2px;
+}
+.to-top-holder p:before, .to-top-holder p:after {
+    content: '';
+    position: absolute;
+    top: -25px;
+    left: 150px;
+    z-index: 2;
+    background: #ffc815;
+}
 
-
-
-
-
-
-
-
+#to-top {
+    cursor: pointer;
+    overflow: hidden;
+    position: absolute;
+    right: 30px;
+    bottom: 5px;
+    width: 50px;
+    height: 70px;
+    font-size: 24px;
+    color: #fff;
+    line-height: 70px;
+    background: #FFC815;
+}
+#to-top .icon-huidaodingbu{
+    font-size: 36px;
+    font-weight: 900;
+}
+#to-top i, .footer-social li a i,.footer-contacts li {
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    -ms-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
+/*footer 结束*/
