--- a/personal website/css/index.css
+++ b/personal website/css/index.css
@@ -29,7 +29,7 @@ html,body{
 #big-nav{
     width: 500px;
     height: 70px;
-    background: #313131;
+    background: #000;
     z-index: 22;
     position: fixed;
     top: 0;
@@ -235,7 +235,10 @@ color: #FFC815;
 /*头结束*/
 /*------内容开始--------*/
 #nav{
+    z-index: 21;
     position: relative;
+    top: 0;
+    left: 0;
     overflow: hidden;
     /*display: none;*/
 }
@@ -243,11 +246,12 @@ color: #FFC815;
     background: #000000;
     color: #fff;
     height: 70px;
-    width: 100vw;
+    width: 50vw;
+    padding: 0 5vw;
     /*position: fixed;*/
 }
 #nav ul li{
-    width: 19vw;
+    width: 10vw;
     line-height: 70px;
     float: left;
     text-align: center;
@@ -259,24 +263,28 @@ color: #FFC815;
 #nav .select:hover{
     color: #fff;
 }
-#nav .select{
+#nav ul .select{
     background: #FFC815;
     color: #000;
 }
 /*-----part1-start----*/
 #part1{
     display: flex;
-    /*width: 100%;*/
     height: 100%;
 }
 #l-part{
     flex-grow: 2;
     width: 0;
-    /*float: left;*/
-    background: url("../img/about1.png") no-repeat;
-    background-size: 100%100%;
     height: 100vh;
+}
+#l-part2{
     position: relative;
+    top: 0px;
+    left: 0;
+}
+#l-part img{
+    height: 90vh;
+    width: 80vh;
 }
 #l-part h3{
     color: #ffffff;
@@ -310,6 +318,7 @@ color: #FFC815;
 }
 #r-part .wrapper{
     margin: 30px 30px 0 30px;
+    padding-top: 70px;
 }
 .t-part .who{
     background: #FFC815;
@@ -337,8 +346,8 @@ color: #FFC815;
     margin-top: 5vh;
 }
 #img-small img{
-    width: 22vw;
-    height: 26vw;
+    width: 20vw;
+    height: 24vw;
 }
 #business-card{
     margin-left: 30px;
@@ -346,7 +355,6 @@ color: #FFC815;
 }
 #business-card .letter{
     font-weight: 400;
-    font-family:'Merienda-Regular';
     margin-bottom: 5px;
 }
 
@@ -717,13 +725,13 @@ input{
 /*footer 开始*/
 .copyright{
     background: #000;
+    position: relative;
+    z-index: 20;
 }
 .container {
     max-width: 900px;
     width: 92%;
     margin: 0 auto;
-    position: relative;
-    z-index: 2;
 }
 .last{
     height: 80px;
