--- a/personal website/css/index.css
+++ b/personal website/css/index.css
@@ -250,20 +250,22 @@ color: #FFC815;
     padding: 0 5vw;
     /*position: fixed;*/
 }
-#nav ul li{
+#nav ul a{
+    display: block;
     width: 10vw;
     line-height: 70px;
     float: left;
     text-align: center;
     cursor: pointer;
-}
-#nav li:hover{
-    color: #FFC815;
-}
-#nav .select:hover{
     color: #fff;
 }
-#nav ul .select{
+#nav li a:hover{
+    color: #FFC815;
+}
+#nav .select a:hover{
+    color: #fff;
+}
+#nav ul .select a{
     background: #FFC815;
     color: #000;
 }
@@ -276,22 +278,33 @@ color: #FFC815;
     flex-grow: 2;
     width: 0;
     height: 100vh;
+    overflow: hidden;
 }
 #l-part2{
     position: relative;
-    top: 0px;
+    top: 0;
     left: 0;
+}
+#vertical{
+    width: 80vh;
+    height: 450vh;
+    position: relative;
+    top: 0;
+    left: 0;
+    transition: all 0.2s linear;
 }
 #l-part img{
     height: 90vh;
     width: 80vh;
+    float: left;
 }
 #l-part h3{
     color: #ffffff;
     font-size: 4vw;
+    z-index: 2;
     position: absolute;
-    left: 35%;
-    top: 45%;
+    left: 30%;
+    top: 230px;
     text-shadow: 2px 2px 10px #292929;
     padding-bottom: 10px;
     border-bottom: 7px solid #FFC815;
@@ -299,17 +312,19 @@ color: #FFC815;
 .c-line{
     width: 1vw;
     height: 70vh;
+    z-index: 2;
     position: absolute;
-    left: 20%;
-    bottom: 10%;
+    left: 15%;
+    top: 60px;
     background: rgba(255, 255, 255, 0.7);
 }
 .d-line{
     width: 30vw;
     height: 1vw;
+    z-index: 2;
     position: absolute;
-    left: 10%;
-    bottom: 17%;
+    left: 5%;
+    top: 425px;
     background: rgba(255, 255, 255, 0.7);
 }
 #r-part{
