--- a/personal website/css/styles.css
+++ b/personal website/css/styles.css
@@ -26,7 +26,7 @@
     position: absolute;
     z-index: 21;
     left: 0;
-    width: 15rem;
+    width: 12rem;
 }
 .sidebar-hover:after {
     content: "";
@@ -47,24 +47,24 @@
     transform: translateX(0);
 }
 .sidebar-hover:hover ~ .sidebar-real .nav-elem.nav-1 {
-    -webkit-transition-delay: 0.4s;
-    transition-delay: 0.4s;
+    -webkit-transition-delay: 0.2s;
+    transition-delay: 0.2s;
 }
 .sidebar-hover:hover ~ .sidebar-real .nav-elem.nav-2 {
-    -webkit-transition-delay: 0.55s;
-    transition-delay: 0.55s;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
 }
 .sidebar-hover:hover ~ .sidebar-real .nav-elem.nav-3 {
-    -webkit-transition-delay: 0.7s;
-    transition-delay: 0.7s;
+    -webkit-transition-delay: 0.35s;
+    transition-delay: 0.35s;
 }
 .sidebar-hover:hover ~ .sidebar-real .nav-elem.nav-4 {
-    -webkit-transition-delay: 0.85s;
-    transition-delay: 0.85s;
+    -webkit-transition-delay: 0.45s;
+    transition-delay: 0.45s;
 }
 .sidebar-hover:hover ~ .sidebar-real .nav-elem.nav-5 {
-    -webkit-transition-delay: 1s;
-    transition-delay: 1s;
+    -webkit-transition-delay: 0.55s;
+    transition-delay: 0.55s;
 }
 .sidebar-hover:hover ~ .sections .content {
     -webkit-transform: translateX(15rem);
@@ -78,7 +78,7 @@
     font-size: 1.6rem;
     top: 50%;
     left: 0;
-    width: 14rem;
+    width: 11rem;
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
     padding: 0.5rem;
@@ -241,22 +241,22 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-attachment: fixed;
-    -webkit-transition: margin 0.8s;
-    transition: margin 0.8s;
+    -webkit-transition: margin 0.4s;
+    transition: margin 0.4s;
     will-change: margin;
 }
 
 .left-part {
     z-index: 20;
     left: 0;
-    width: 15rem;
-    -webkit-transition-delay: 1s;
-    transition-delay: 1s;
+    width: 12rem;
+    -webkit-transition-delay: 0.5s;
+    transition-delay: 0.5s;
 }
 
 .content {
-    left: 15rem;
-    width: calc(100% - 15rem);
+    left: 12rem;
+    width: calc(100% - 12rem);
     height: 100%;
     -webkit-transition: -webkit-transform 0.4s 0.2s;
     transition: transform 0.4s 0.2s;
@@ -285,8 +285,8 @@
 }
 
 .section-heading {
-    top: 44%;
-    left: 0;
+    top: 40%;
+    left: 5vw;
     font-size: 70px;
     line-height: 1;
     font-family: pfd-medium;
@@ -310,24 +310,24 @@
     width: 12.5%;
 }
 .bg-part:nth-child(4) {
+    -webkit-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+}
+.bg-part:nth-child(3), .bg-part:nth-child(5) {
+    -webkit-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+.bg-part:nth-child(2), .bg-part:nth-child(6) {
     -webkit-transition-delay: 0.4s;
     transition-delay: 0.4s;
 }
-.bg-part:nth-child(3), .bg-part:nth-child(5) {
-    -webkit-transition-delay: 0.6s;
-    transition-delay: 0.6s;
-}
-.bg-part:nth-child(2), .bg-part:nth-child(6) {
-    -webkit-transition-delay: 0.8s;
-    transition-delay: 0.8s;
-}
 .bg-part:nth-child(1), .bg-part:nth-child(7) {
-    -webkit-transition-delay: 1s;
-    transition-delay: 1s;
+    -webkit-transition-delay: 0.5s;
+    transition-delay: 0.5s;
 }
 .bg-part:nth-child(8) {
-    -webkit-transition-delay: 1.2s;
-    transition-delay: 1.2s;
+    -webkit-transition-delay: 0.6s;
+    transition-delay: 0.6s;
 }
 .bg-part:nth-child(1) {
     left: 0%;
